[gd_scene load_steps=2 format=3 uid="uid://rf03yimxpngp"]

[ext_resource type="Script" path="res://modify_options.gd" id="1_lpsup"]

[node name="modify_options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lpsup")

[node name="Options_Container" type="ScrollContainer" parent="."]
offset_left = 280.0
offset_top = 207.0
offset_right = 542.0
offset_bottom = 394.0

[node name="VBoxContainer" type="VBoxContainer" parent="Options_Container"]
layout_mode = 2

[node name="return_to_spin" type="Button" parent="."]
layout_mode = 0
offset_left = 267.0
offset_top = 453.0
offset_right = 549.0
offset_bottom = 509.0
text = "save and return"

[node name="save_changes" type="Button" parent="."]
layout_mode = 0
offset_left = 267.0
offset_top = 453.0
offset_right = 275.0
offset_bottom = 461.0

[connection signal="pressed" from="return_to_spin" to="." method="_on_return_to_spin_pressed"]
[connection signal="pressed" from="save_changes" to="." method="_on_save_changes_pressed"]
